css/solutions-we-provide.css
.center {
  text-align: center;
}

/* Mobile view */
@media (max-width: 600px) {
  td > img {
    width: 40px;
    height: 40px;
  }
  th[scope="row"] {
    display: none;
  }
  .no-mobile {
    display: none;
  }
  tbody > tr > td:nth-child(odd) {
    padding: 0.5rem;
    background: rgba(244, 160, 0, 0.5);
  }
  td > strong {
    font-weight: bold;
    font-size: 9px;
  }
}

/* Desktop view */
@media (min-width: 600px) {
  td > img {
    width: 90px;
    height: 90px;
  }
  tbody > tr:hover {
    background: rgba(66, 133, 244, 0.25);
  }
}

